--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "resolve-bin": "^0.4.0",
     "sass-loader": "^7.0.1",
     "serve": "^3.4.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.0.3",
     "source-map": "^0.5.6",
     "tar": "^3.1.5",
